--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,4 +1,4 @@
-.direct-link{position:absolute;top:-1px;left:0;z-index:1000;height:1px}
+.x{position:absolute;top:-1px;left:0;z-index:1000;height:1px}
 .direct-link a{position:absolute;top:-999px;padding:5px 10px;font-weight:bold;color:#fff;background:#333;text-decoration:none;white-space:nowrap}
 .direct-link a:focus{top:0}
 .ir_pm{display:block;overflow:hidden;font-size:0;line-height:0;text-indent:-9999px}
