--- a/client/src/components/DocFooter.scss
+++ b/client/src/components/DocFooter.scss
@@ -1,5 +1,3 @@
-
-
 .doc-footer {
   grid-area: footer; 
   width: 100%;
@@ -7,21 +5,21 @@
   background-color: #ffffff;
   position: absolute;
   bottom: 0;
-}
-.doc-footer .inner_footer {
-  display: flex;
-  justify-content: space-between;
-  width: 916px;
-  margin: 0 auto;
-  padding-top: 22px;
-}
-.doc-footer .inner_footer small {
-  font-size: 12px;
-  line-height: 21px;
-  color: #999;
-}
-.inner_footer .area_link a {
-  margin-left: 10px;
-  font-size: 14px;
-  color: #999;
+  .inner_footer {
+    display: flex;
+    justify-content: space-between;
+    width: 916px;
+    margin: 0 auto;
+    padding-top: 22px;
+    small {
+      font-size: 12px;
+      line-height: 21px;
+      color: #999;
+    }
+    .area_link a {
+      margin-left: 10px;
+      font-size: 14px;
+      color: #999;
+    }
+  }
 }
