--- a/client/src/components/DocHeader.scss
+++ b/client/src/components/DocHeader.scss
@@ -1,10 +1,10 @@
-.doc-header{
+.doc-header {
   .main_tit {
     background-color: #1A1A1A;
     .inner_main{
-      display: grid;
+      /* display: grid;
       justify-content: space-between;
-      grid-template-columns: 1fr 1fr; 
+      grid-template-columns: 1fr 1fr; */
       overflow: hidden;
       width: 916px;
       height: 79px;
