--- a/client/src/styles/reset.scss
+++ b/client/src/styles/reset.scss
@@ -1,4 +1,4 @@
-
+/* reset */
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,textarea,p,blockquote,th,td,input,select,button{margin:0;padding:0}
 fieldset,img{border:0 none}
 dl,ul,ol,menu,li{list-style:none}
@@ -12,3 +12,7 @@ body,th,td,input,select,textarea,button{font-size:12px;line-height:1.5;font-fami
 a{color:#333;text-decoration:none}
 a:active{background-color:transparent}
 address,caption,cite,code,dfn,em,var{font-style:normal;font-weight:normal}
+
+/* global */
+.ir_pm{display:block;overflow:hidden;font-size:0;line-height:0;text-indent:-9999px}
+.screen_out{overflow:hidden;position:absolute;width:0;height:0;line-height:0;text-indent:-9999px}
